[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-docker-env"
version = "0.1.0"
description = "A simple Python package to manage a Docker-based ROS 2 environment."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "aldenpower" }
]
dependencies = []

[project.scripts]
rosdocker = "ros_docker_env.cli:main"

[tool.setuptools.package-data]
ros_docker_env = ["resources/docker/*"]
